--- a/Portfolio.html
+++ b/Portfolio.html
@@ -13,84 +13,94 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
         rel="stylesheet">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
+            integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q=="
+            crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="./css/styles.css">
 </head>
 
 <body>
     <header class="header">
-        <nav class="navigation">
-            <a class="logo link" href="./"> <span class="logo-blue"> Web</span>Studio </a>
-            <ul class="menu list">
-                <li class="menu-item"><a class="menu-link link" href="./index.html">Студия</a></li>
-                <li class="menu-item"><a class="menu-link link current" href="./Portfolio.html">Портфолио</a></li>
-                <li class="menu-item"><a class="menu-link link" href="#">Контакты</a></li>
+        <div class="container header-container">
+            <nav class="navigation">
+                <a class="logo link" href="./"> <span class="logo-blue"> Web</span>Studio </a>
+                <ul class="menu list">
+                    <li class="menu-item"><a class="menu-link link current" href="#">Студия</a></li>
+                    <li class="menu-item"><a class="menu-link link" href="./Portfolio.html">Портфолио</a></li>
+                    <li class="menu-item"><a class="menu-link link" href="#">Контакты</a></li>
+                </ul>
+            </nav>
+            <ul class="header-adress list">
+                <li><a class="header-contacts link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+                <li><a class="header-contacts tel link" href="tel:+380961111111">+38 096 111 11 11</a></li>
             </ul>
-        </nav>
-        <ul class="list">
-            <li><a class="header-contacts link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-            <li><a class="header-contacts link" href="tel:+380961111111">+38 096 111 11 11</a></li>
-        </ul>
+        </div>
     </header>
-    <main>
-        <ul class="list">
-            <li><button class="portfolio-button" type="button">Все</button></li>
-            <li><button class="portfolio-button" type="button">Веб-Сайты</button></li>
-            <li><button class="portfolio-button" type="button">Приложения</button></li>
-            <li><button class="portfolio-button" type="button">Дизайн</button></li>
-            <li><button class="portfolio-button" type="button">Маркетинг</button></li>
+       <main>
+            <div class="container">
+        <ul class="all-link-text list">
+            <li class="link-text"><button class="portfolio-button" type="button">Все</button></li>
+            <li class="link-text"><button class="portfolio-button" type="button">Веб-Сайты</button></li>
+            <li class="link-text"><button class="portfolio-button" type="button">Приложения</button></li>
+            <li class="link-text"><button class="portfolio-button" type="button">Дизайн</button></li>
+            <li class="link-text"><button class="portfolio-button" type="button">Маркетинг</button></li>
         </ul>
-        <ul class="list">
-            <li>
+       <ul class="all-link-img list">
+            <li class="link-img">
                 <img src="./images/Portfolio/Portfolio-1.jpg" alt="Ноутбук" width="370" height="295">
                 <h3 class="portfolio-header" >Технокряк</h3>
                 <p class="portfolio-text" >Веб-сайт</p>
             </li>
-            <li>
+            <li class="link-img">
                 <img src="./images/Portfolio/Portfolio-2.jpg" alt="Баскетболисты" width="370" height="295">
                 <h3 class="portfolio-header" >Постер New Orlean vs Golden Star</h3>
                 <p class="portfolio-text" >Дизайн</p>
             </li>
-            <li>
+            <li class="link-img">
                 <img src="./images/Portfolio/Portfolio-3.jpg" alt="Логотип ресторана" width="370" height="295">
                 <h3 class="portfolio-header" >Ресторан Seafood</h3>
                 <p class="portfolio-text" >Приложение</p>
             </li>
-            <li>
+            <li class="link-img">
                 <img src="./images/Portfolio/Portfolio-4.jpg" alt="Наушники" width="370" height="295">
                 <h3 class="portfolio-header" >Проект Prime</h3>
                 <p class="portfolio-text" >Маркетинг</p>
             </li>
-            <li>
+            <li class="link-img">
                 <img src="./images/Portfolio/Portfolio-5.jpg" alt="Коробки" width="370" height="295">
                 <h3 class="portfolio-header" >Проект Boxes</h3>
                 <p class="portfolio-text" >Приложение</p>
             </li>
-            <li>
+            <li class="link-img">
                 <img src="./images/Portfolio/Portfolio-6.jpg" alt="Монитор" width="370" height="295">
                 <h3 class="portfolio-header" >Inspiration has no Borders</h3>
                 <p class="portfolio-text" >Веб-сайт</p>
             </li>
-            <li>
+            <li class="link-img">
                 <img src="./images/Portfolio/Portfolio-7.jpg" alt="Книга" width="370" height="295">
                 <h3 class="portfolio-header" >Издание Limited Edition</h3>
                 <p class="portfolio-text" >Дизайн</p>
             </li>
-            <li>
+            <li class="link-img">
                 <img src="./images/Portfolio/Portfolio-8.jpg" alt="Бирка" width="370" height="295">
                 <h3 class="portfolio-header" >Проект LAB</h3>
                 <p class="portfolio-text" >Маркетинг</p>
             </li>
-            <li>
+            <li class="link-img">
                 <img src="./images/Portfolio/Portfolio-9.jpg" alt="Работа за ноутбуком" width="370" height="295">
                 <h3 class="portfolio-header" >Growing Business</h3>
                 <p class="portfolio-text" >Приложение</p>
             </li>
         </ul>
+        </div>
     </main>
-        <footer class="footer">
+    
+    <div class="container">
+        <footer class="footer footer-space">
+        <div class="logo-word">
             <a class="footer-logo link" href="./"> <span class="logo-blue">Web</span>Studio </a>
             <address>
-                <ul class="list">
+                <ul class="adress-list list">
                     <li>
                         <a class="footer-adress link" href="https://goo.gl/maps/AaFA44fgxM3qHyrE7" target="_blank"
                             rel="noopener noreferrer">
@@ -102,6 +112,7 @@
                 </ul>
             </address>
         </footer>
+        </div>
         </body>
         
         </html>
