hw3  witout bags

--- a/index.html
+++ b/index.html
@@ -32,37 +32,35 @@
     </header>
     <main>
       <!--HERO-->
-      <div class="container ">
-      <section class="hero">
-        <h1 class="main-title">Эффективные решения <p>для вашего бизнеса</p> </h1>
+        <section class="hero">
+        <h1 class="main-title">Эффективные решения <span>для вашего бизнеса</span> </h1>
         <button class="main-title-button" type="button">Заказать услугу</button>
-        </div>
-      </section>
-      <section>
+        </section>
+      <section class="identitation">
         <div class="container">
         <ul class="subtitle list">
-          <li>
+          <li class="subt-identit" >
             <h3 class="subtitle-list">Внимание к деталям</h3>
             <p class="subt-list-text">
               Идейные соображения, а также начало повседневной работы по
               формированию позиции.
             </p>
           </li>
-          <li>
+          <li class="subt-identit">
             <h3 class="subtitle-list">Пунктуальность</h3>
             <p class="subt-list-text">
               Задача организации, в особенности же рамки и место обучения кадров
               влечет за собой
             </p>
           </li>
-          <li>
+          <li class="subt-identit" >
             <h3 class="subtitle-list">Планирование</h3>
             <p class="subt-list-text">
               Равным образом консультация с широким активом в значительной
               степени обуславливает.
             </p>
           </li>
-          <li>
+          <li class="subt-identit" >
             <h3 class="subtitle-list">Современные технологии</h3>
             <p class="subt-list-text">
               Значимость этих проблем настолько очевидна, что реализация
@@ -104,6 +102,7 @@
         </ul>
       </div>
       </section>
+      
       <section class="our-team">
         <!--Our team-->
         <div class="container">
@@ -153,10 +152,11 @@
         </div>  
       </section>
     </main>
-    <div class="container">
-    <footer class="footer">
+      <footer class="footer">
+      <div class="container">
       <div class="logo-word">
       <a class="footer-logo link" href="./"> <span class="logo-blue">Web</span>Studio </a>
+      </div>
       <address>
         <ul class="adress-list list">
           <li>
