--- a/Portfolio.html
+++ b/Portfolio.html
@@ -21,19 +21,20 @@
 
 <body>
     <header class="header">
-        <div class="container header-container">
-            <nav class="navigation">
-                <a class="logo link" href="./"> <span class="logo-blue"> Web</span>Studio </a>
-                <ul class="menu list">
-                    <li class="menu-item"><a class="menu-link link current" href="#">Студия</a></li>
-                    <li class="menu-item"><a class="menu-link link" href="./Portfolio.html">Портфолио</a></li>
-                    <li class="menu-item"><a class="menu-link link" href="#">Контакты</a></li>
-                </ul>
-            </nav>
-            <ul class="header-adress list">
-                <li><a class="header-contacts link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-                <li><a class="header-contacts tel link" href="tel:+380961111111">+38 096 111 11 11</a></li>
-            </ul>
+         <div class="container header-container">
+    <nav class="navigation">
+        <a class="logo link" href="./"> <span class="logo-blue"> Web</span>Studio </a>
+        <ul class="menu list">
+            <li class="menu-item"><a class="menu-link link" href="./index.html">Студия</a></li>
+            <li class="menu-item"><a class="menu-link link current" href="./Portfolio.html">Портфолио</a></li>
+            <li class="menu-item"><a class="menu-link link" href="#">Контакты</a></li>
+        </ul>
+        </nav>
+    <ul class="header-adress list">
+        <li><a class="header-contacts link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+        <li><a class="header-contacts tel link" href="tel:+380961111111">+38 096 111 11 11</a></li>
+    </ul>
+    
         </div>
     </header>
        <main>
@@ -48,48 +49,66 @@
        <ul class="all-link-img list">
             <li class="link-img">
                 <img src="./images/Portfolio/Portfolio-1.jpg" alt="Ноутбук" width="370" height="295">
+                <div class="portfol-cube">
                 <h3 class="portfolio-header" >Технокряк</h3>
                 <p class="portfolio-text" >Веб-сайт</p>
+            </div>
             </li>
             <li class="link-img">
                 <img src="./images/Portfolio/Portfolio-2.jpg" alt="Баскетболисты" width="370" height="295">
+                <div class="portfol-cube">
                 <h3 class="portfolio-header" >Постер New Orlean vs Golden Star</h3>
                 <p class="portfolio-text" >Дизайн</p>
+            </div>
             </li>
             <li class="link-img">
                 <img src="./images/Portfolio/Portfolio-3.jpg" alt="Логотип ресторана" width="370" height="295">
+                <div class="portfol-cube">
                 <h3 class="portfolio-header" >Ресторан Seafood</h3>
                 <p class="portfolio-text" >Приложение</p>
+            </div>
             </li>
             <li class="link-img">
                 <img src="./images/Portfolio/Portfolio-4.jpg" alt="Наушники" width="370" height="295">
+                <div class="portfol-cube">
                 <h3 class="portfolio-header" >Проект Prime</h3>
                 <p class="portfolio-text" >Маркетинг</p>
+            </div>
             </li>
             <li class="link-img">
                 <img src="./images/Portfolio/Portfolio-5.jpg" alt="Коробки" width="370" height="295">
+                <div class="portfol-cube">
                 <h3 class="portfolio-header" >Проект Boxes</h3>
                 <p class="portfolio-text" >Приложение</p>
+            </div>
             </li>
             <li class="link-img">
                 <img src="./images/Portfolio/Portfolio-6.jpg" alt="Монитор" width="370" height="295">
+                <div class="portfol-cube">
                 <h3 class="portfolio-header" >Inspiration has no Borders</h3>
                 <p class="portfolio-text" >Веб-сайт</p>
+            </div>
             </li>
             <li class="link-img">
                 <img src="./images/Portfolio/Portfolio-7.jpg" alt="Книга" width="370" height="295">
+                <div class="portfol-cube">
                 <h3 class="portfolio-header" >Издание Limited Edition</h3>
                 <p class="portfolio-text" >Дизайн</p>
+            </div>
             </li>
             <li class="link-img">
                 <img src="./images/Portfolio/Portfolio-8.jpg" alt="Бирка" width="370" height="295">
+                <div class="portfol-cube">
                 <h3 class="portfolio-header" >Проект LAB</h3>
                 <p class="portfolio-text" >Маркетинг</p>
+            </div>
             </li>
             <li class="link-img">
                 <img src="./images/Portfolio/Portfolio-9.jpg" alt="Работа за ноутбуком" width="370" height="295">
+                <div class="portfol-cube">
                 <h3 class="portfolio-header" >Growing Business</h3>
                 <p class="portfolio-text" >Приложение</p>
+            </div>
             </li>
         </ul>
         </div>
@@ -98,19 +117,22 @@
     <div class="container">
         <footer class="footer footer-space">
         <div class="logo-word">
-            <a class="footer-logo link" href="./"> <span class="logo-blue">Web</span>Studio </a>
-            <address>
-                <ul class="adress-list list">
-                    <li>
-                        <a class="footer-adress link" href="https://goo.gl/maps/AaFA44fgxM3qHyrE7" target="_blank"
-                            rel="noopener noreferrer">
-                            г. Киев, пр-т Леси Украинки, 26
-                        </a>
-                    </li>
-                    <li><a class="footer-contacts link" href="mailto:info@example.com"> info@example.com </a></li>
-                    <li><a class="footer-contacts link" href="tel:+380991111111"> +38 099 111 11 11 </a></li>
-                </ul>
-            </address>
+      <a class="footer-logo link" href="./"> <span class="logo-blue">Web</span>Studio </a>
+      <address>
+        <ul class="adress-list list">
+          <li>
+            <a class="footer-adress link"
+              href="https://goo.gl/maps/AaFA44fgxM3qHyrE7"
+              target="_blank"
+              rel="noopener noreferrer"
+            >
+              г. Киев, пр-т Леси Украинки, 26
+            </a>
+          </li>
+          <li><a class="footer-contacts link" href="mailto:info@example.com"> info@example.com </a></li>
+          <li><a class="footer-contacts link" href="tel:+380991111111"> +38 099 111 11 11 </a></li>
+        </ul>
+      </address>
         </footer>
         </div>
         </body>
