--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <main>
       <!--HERO-->
         <section class="hero">
-        <h1 class="main-title">Эффективные решения <span>для вашего бизнеса</span> </h1>
+        <h1 class="main-title">Эффективные решения <span class="main-title-second">для вашего бизнеса</span> </h1>
         <button class="main-title-button" type="button">Заказать услугу</button>
         </section>
       <section class="identitation">
@@ -109,7 +109,7 @@
         <h2 class="title-team">Наша команда</h2>
         <ul class="team-list list">
           <li class="team-item">
-            <img
+            <img class="team-item-img"
               src="./images/Our team/our_team_1.jpg"
               alt="Product Designer"
               width="270"
@@ -119,7 +119,7 @@
             <p class="team-profession">Product Designer</p>
           </li>
           <li class="team-item">
-            <img
+            <img class="team-item-img"
               src="./images/Our team/our_team_2.jpg"
               alt="Frontend Developer"
               width="270"
@@ -129,7 +129,7 @@
             <p class="team-profession">Frontend Developer</p>
           </li>
           <li class="team-item">
-            <img
+            <img class="team-item-img"
               src="./images/Our team/our_team_3.jpg"
               alt="Marketing"
               width="270"
@@ -139,7 +139,7 @@
             <p class="team-profession">Marketing</p>
           </li>
           <li class="team-item">
-            <img
+            <img class="team-item-img"
               src="./images/Our team/our_team_4.jpg"
               alt="UI Designer"
               width="270"
